# hackaton-biofy

./: .gitignore  pyproject.toml
src/: app.py  main.py  rag_chain.py
src/chroma_db/: chroma.sqlite3
src/chroma_db/1f69b8c4-b420-45dd-80cd-75ee60b611d7/: index_metadata.pickle
src/config/: config.py
src/data_extraction/: csv_culture_read.py  pdf-culture-read.py  pdf_culture_read.py
src/schemas/: input.py
