[project]
name = "hackaton-biofy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma-hnswlib",
    "chromadb",
    "fastapi[standard]>=0.115.12",
    "groq>=0.20.0",
    "langchain>=0.3.21",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-groq>=0.3.1",
    "langchain-huggingface>=0.1.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "pydantic-config>=0.3.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=4.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
format = 'ruff check . --fix && ruff format .'
